服务编排测试

--- a/database/src/main/resources/application.properties
+++ b/database/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 mybatis.mapper-locations=classpath*:mybatis/sqlmap/*.xml
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
+
+spring.profiles.active=local
